<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransientApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="view_page">View Page</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="view_msg">Copied text</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="service_notification">test_service</string>
    <string name="service">service</string>
    <string name="search_wifi">Connect Wifi</string>
    <string name="no_ads">No ads to view</string>
    <string name="refresh">Refresh</string>
    <string name="menu_refresh">Refresh Menu</string>

</resources>
