<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<EditText 
	    android:id="@+id/edit_message"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:hint="@string/edit_message"
	     />
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_send"
	    android:onClick="sendMessage"
	     />
	
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/start_service"
	    android:onClick="startService"
	    />
	
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/stop_service"
	    android:onClick="stopService"
	    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_wifi"
        android:onClick="scanWifi"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wifilist"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorbox"
        android:hint="Show errors here"/>
</LinearLayout>
